client/src/about/about.css
@import url("https://fonts.googleapis.com/css?family=M+PLUS+1p&display=swap");
.App {
  text-align: center;
  width: 90%;
  /* padding-left: 5%; */
}

.experience-fig-1 {
  background: linear-gradient(
    90deg,
    #d3a630 0%,
    rgba(238, 154, 93, 0.109375) 42.87%,
    rgba(196, 196, 196, 0) 56.77%
  );
  mix-blend-mode: multiply;
  background: url(../photos//aboutbackground.jpg);
  mix-blend-mode: hard-light;
  width: 100%;
  height: 360px;
}

.team {
  background: #150433;
  height: 1494px;
}

@media screen and (max-width: 800px) {
  .left,
  .main,
  .right {
    width: 100%;
    /* The width is 100%, when the viewport is 800px or smaller */
  }
  .team {
    display: flex;
    flex-direction: column;
  }
}

@media (min-width: 576px) {
  .team {
    display: flex;
    flex-direction: column;
  }
}

.experience-fig h2 {
  /* Host An Experience */
  /* position: absolute; */
  width: 529px;
  height: 90px;
  left: 209px;
  top: 293px;
  /* Headers/H2 */
  font-family: Mplus 1p;
  font-style: normal;
  font-weight: 500;
  font-size: 54px;
  line-height: 80px;
  /* Colors/Secondary_200 */
  color: #ffffff;
}

h2 {
  color: #ffffff;
}

.here1,
.here2 {
  /* Title/Small */
  font-family: Mplus 1p;
  font-style: normal;
  font-weight: 800;
  font-size: 12.6px;
  line-height: 26px;
  letter-spacing: 6px;
  text-transform: uppercase;
  /* Colors/Primary */
  color: #f61067;
}

.here1 {
  /* position: absolute;
    width: 304px;
    height: 18px;
    left: 109px;
    top: 695px; */
}

.here2 {
  /* position: absolute;
    width: 304px;
    height: 18px;
    right: 650px;
    top: 1589px; */
}

.why-host {
  /* Why Host */
  /* position: absolute;
    width: 510px;
    height: 72px;
    left: 35px;
    top: 700px; */
  /* Headers/H3 */
  font-family: Mplus 1p;
  font-style: normal;
  font-weight: 500;
  font-size: 45px;
  line-height: 67px;
  /* TextColors/Headers */
  color: #30233d;
}

.apply-now-1 {
  color: white;
  /* position: absolute;
    width: 197px;
    height: 45px;
    left: 200px;
    top: 816px; */
  /* Colors/Secondary_100 */
  background: #5e239d;
  border-radius: 36px;
}

.ellipse {

  width: 800px;
  height: 260px;
 /* border-radius: 50%;*/
  border: 3px solid  #180434; 
  margin-left: 30px;
  width: 800px;
  height: 260px;
 /* border-radius: 50%;*/
  border: 3px solid  #180434; 
  text-align: center;
  /*vertical-align: middle;*/
  /*background: #5e239d;*/

}

.ellipser {
  font-size: 12px;
  width: 260px;
  height: 260px;
  border-radius: 50%;
  /*border: 1px solid red; */
  text-align: center;
  vertical-align: middle;
  /*background: #5e239d;*/
}

.apply-now-1 a,
.apply-now-2 a {
  /* position: relative;
    bottom: 2px;
    left: 30px; */
  /*Button */
  font-family: Mplus 1p;
  font-style: normal;
  font-weight: 500;
  font-size: 13.5px;
  line-height: 20px;
  display: flex;
  align-items: center;
  letter-spacing: 2px;
  text-transform: uppercase;
  /* Colors/White */
  color: #fcfcfc;
}

.host-guidelines {
  /* position: absolute;
    width: 197px;
    height: 45px;
    left: 440px;
    top: 816px; */
  /* Colors/Secondary_100 */
  border: 1px solid #5e239d;
  box-sizing: border-box;
  border-radius: 36px;
}

.host-guidelines a {
  /* position: relative;
    left: 8px; */
  /* Text_Misc/Button */
  font-family: Mplus 1p;
  font-style: normal;
  font-weight: 500;
  font-size: 13.5px;
  line-height: 20px;
  display: flex;
  align-items: center;
  letter-spacing: 2px;
  text-transform: uppercase;
  /* Colors/Secondary_100 */
  color: #5e239d;
}

.paragraph {
  font-family: Mplus 1p;
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
  line-height: 29px;
  /* Colors/White */
  color: #fcfcfc;
}

.shell {
  font-family: Mplus 1p;
  font-style: normal;
  font-weight: 800;
  font-size: 22.0px;
  line-height: 35px;
  /* identical to box height */
  /* Colors/White */
  color: #fcfcfc;
}

.ceo {
  margin-left: 20%;
  margin-left: 160px;
  position: relative;
  right: 10%;
  font-family: Mplus 1p;
  font-style: normal;
  font-weight: 800;
  font-size: 13.6px;
  line-height: 24px;
  line-height: 26px;
  letter-spacing: 6px;
  text-transform: uppercase;
  /* Colors/White */
  color: #fcfcfc;
  opacity: 0.5;
}

.fig1 {
  /* position: absolute;
    width: 679px;
    height: 606px;
    left: -2px;
    top: 931px; */
  background: linear-gradient(
      138.53deg,
      rgba(117, 101, 160, 0.25) 2.82%,
      rgba(82, 119, 155, 0.25) 95.45%
    ),
    linear-gradient(0deg, rgba(36, 41, 52, 0.3), rgba(36, 41, 52, 0.3)),
    rgba(255, 255, 255, 0.1);
  background-blend-mode: normal, normal, overlay;
  backdrop-filter: blur(30px);
}

.inside h5 {
  /* position: absolute;
    width: 567px;
    height: 350px;
    left: 70px;
    top: 1055px; */
  /* Text/Regular */
  font-family: Mplus 1p;
  font-style: normal;
  font-weight: 800;
  font-size: 18px;
  line-height: 29px;
  /* TextColors/Headers */
  color: #30233d;
}

.inside p {
  /* position: absolute;
  width: 567px;
  height: 350px;
  left: 70px;
  top: 1055px; */
  /* Text/Regular */
  font-family: Mplus 1p;
  font-style: normal;
  /* TextColors/Headers */
  color: #30233d;
}

.why-yolo {
  font-family: Mplus 1p;
  font-style: normal;
  font-weight: 500;
  font-size: 45px;
  line-height: 67px;
  text-align: center;
  /* TextColors/Headers */
  color: #30233d;
}

@media screen and (min-width: 0px) and (max-width: 1200px) {
   .team_container img {
     max-width: 180px;
     max-height:180px;
  }
  .ellipse {
  margin-left: 35px;
  max-width: 600px;
  height: 160px;
  }
  .shell{
    font-size: 22px;
    line-height: 9px;
  }
    .paragraph{
    line-height: 18px;
    font-size: 12px;
  }
   .ceo{
    margin-left: 100px;
    font-size: 12px;
    line-height: 8px;
    letter-spacing: 4px;
  }
}

@media screen and (min-width: 0px) and (max-width: 900px) {
   .team_container img {
     max-width: 150px;
     max-height:150px;
  }
  .ellipse {
  margin-left: 30px;
  max-width: 340px;
  height: 130px;
  }
  .paragraph{
    line-height: 10px;
    font-size: 11px;
  }
  .shell{
    font-size: 16px;
    line-height: 7px;
  }
  .ceo{
    margin-left: 70px;
    font-size: 8px;
    line-height: 5px;
    letter-spacing: 2px;
  }
}

@media screen and (min-width: 0px) and (max-width: 600px) {
   .team_container img {
     max-width: 100px;
     max-height:100px;
  }
  .ellipse {
  margin-left: 20px;
  max-width: 270px;
  height: 90px;
  }
  .paragraph{
    line-height: 8px;
    font-size: 6px;
  }
  .shell{
    font-size: 12px;
    line-height: 5px;
  }
  .ceo{
    margin-left: 55px;
    font-size: 6px;
    line-height: 4px;
    letter-spacing: 2px;
  }

}

